[package]
name = "gpt3bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
isahc = "1.7"
hyper = {version="^0.14", features=["full"]}
hyper-tls = "^0.5"
serde = "^1"
serde_json = "^1.0"
serde_derive = "^1.0"